--- a/prmApp/src/locales/en.json
+++ b/prmApp/src/locales/en.json
@@ -18,15 +18,15 @@
   "navbar.users":             "Users",
   "enquiries.search":         "Search",
   "enquiries.searchby":       "Search by",
-  "enquiries.addpacient":     "Dodaj pacienta",
-  "enquiries.columname.name":       "Ime",
-  "enquiries.columname.surname":    "Priimek",
-  "enquiries.columname.phone":      "Telefon",
+  "enquiries.addpacient":     "Add Patient",
+  "enquiries.columname.name":       "Name",
+  "enquiries.columname.surname":    "Last name",
+  "enquiries.columname.phone":      "Phone",
   "enquiries.columname.email":      "email",
-  "enquiries.columname.city":       "Kraj",
-  "enquiries.columname.country":    "Država",
-  "enquiries.columname.lastvisit":  "Zadnji obisk",
-  "enquiries.columname.nextvisit":   "Naslednji obisk",
-  "enquiries.columname.dentist":    "Osebni zobozdravnik",
-  "enquiries.itemsperpage":         "Zadetkov na stran"  
+  "enquiries.columname.city":       "City",
+  "enquiries.columname.country":    "Country",
+  "enquiries.columname.lastvisit":  "Last visit",
+  "enquiries.columname.nextvisit":  "Next visit",
+  "enquiries.columname.dentist":    "Personal dentist",
+  "enquiries.itemsperpage":         "Items per page"  
 }
