--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -3,7 +3,7 @@
     "dashboard": "Domov",
     "calendar": "Koledar",
     "patients": "Pacienti",
-    "assignment": "Naloga",
+    "assignment": "Naloge",
     "users": "Uporabniki",
     "statistics-clinic": "Statistika Klinike",
     "maps": "Zemljevidi",
