Menu setup and routing

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -3,7 +3,7 @@
     "dashboard": "Home",
     "calendar": "Calendar",
     "patients": "Patients",
-    "assignment": "Assignment",
+    "assignment": "Assignments",
     "users":"Users",
     "statistics-clinic": "Statistics Clinic",
     "maps": "Maps",
