minor fix to 'invoice example'

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -167,6 +167,7 @@
     "invoiceInfo": {
       "invoiceDate": "Date",
       "invoiceTotal": "Total",
+      "invoiceStatus": "Status",
       "invoiceDetails": "Billing Details",
       "invoiceIssuedIn": "Issued In",
       "invoiceIssuedBy": "Issued By"
