--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -12,7 +12,7 @@
   "documents": {
     "offers": "Ponudbe",
     "invoices": "Računi",
-    "advInvoices": "Avansni Računi"
+    "advPayments": "Avansni Računi"
   },
   "statistics": {
     "statistics for clinic": "Statistika Klinike",
