reporting emazing page - country dropdown

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -255,6 +255,7 @@
     "lastMonth": "Last Month",
     "thisYear": "This Year",
     "lastYear": "Last Year",
+    "countrySelect": "All Countries",
     "servicesSummaryColumn": {
       "serviceTitle": "Service Title",
       "serviceCount": "Service Count",
