--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -252,6 +252,7 @@
     "lastMonth": "Prejšnji mesec",
     "thisYear": "Letos",
     "lastYear": "Lani",
+    "countrySelect": "Vse države",
     "servicesSummaryColumn": {
       "serviceTitle": "Ime storitve",
       "serviceCount": "Število storitev",
