--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -235,7 +235,7 @@
     "completedAssignments": "Opravljene Naloge"
   },
   "statisticsForClinic": {
-    "doctors": "Doktorji",
+    "attendance": "Število terminov z udeležbo",
     "nurses": "Sestre",
     "patients": "Pacienti",
     "pharmacists": "Farmacevti",
