Fix edit button

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -141,7 +141,7 @@
     },
     "personalInfoTab": "Personal Information",
     "personalInfo": {
-      "edit": "Edit",
+      "edit": "Edit data",
       "personalInformation": "Personal Information",
       "firstName": "First name",
       "lastName": "Last name",
