--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -141,7 +141,7 @@
     },
     "personalInfoTab": "Osebni podatki",
     "personalInfo": {
-      "edit": "Uredi",
+      "edit": "Uredi podatke",
       "personalInformation": "Osebni podatki",
       "firstName": "Ime",
       "lastName": "Priimek",
