Fixed personal doctors section on overview

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -137,7 +137,8 @@
       "patientNotes": "Patient notes",
       "patientNotesOpen": "Open",
       "futureAppointments": "Future appointments",
-      "pastAppointments": "Past appointments"
+      "pastAppointments": "Past appointments",
+      "notSelected": "Not selected"
     },
     "personalInfoTab": "Personal Information",
     "personalInfo": {
