--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -96,7 +96,10 @@
     "changeColor": "Change Color",
     "viewPatient": "View Patient",
     "changeDisplayColor": "Change Appointment Color",
-    "appointmentCancelled": "Appointment Cancelled by the Patient"
+    "appointmentCancelled": "Appointment Cancelled by the Patient",
+    "patient": "Patient",
+    "doctor": "Doctor",
+    "location": "Location"
   },
   "patients": {
     "patientsHeader": "Patients",
