modifications to the 'services' table in EPR/invoices

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -194,8 +194,8 @@
       "serviceTitle": "Service",
       "serviceDate": "Date",
       "doneBy": "Done by",
-      "serviceCount": "Service count",
-      "servicePrice": "Price"
+      "servicePrice": "Price",
+      "paymentMethod": "Payment method"
     },
     "offersTab": "Offers",
     "offers": {
