--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -127,6 +127,7 @@
       "address": "Naslov",
       "addressUnknown": "Neznano",
       "addAppointment": "Dodaj termin",
+      "addInvoice": "Dodaj Račun",
       "addAssignment": "Dodaj nalogo",
       "deletePatient": "Izbriši pacienta",
       "personalDoctors": "Osebni zdravniki",
